correccion de textos

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -22,7 +22,7 @@
                             Tenemos la mejor combinación entre EXPERIENCIA, COMPROMISO, CONOCIMIENTO Y PROFESIONALISMO.
                         </h5>
                     </div>
-                    <p class="ion-padding-bottom">
+                    <p class="text ion-padding-bottom">
                         Nuestros socios y equipo de trabajo cuentan con mas de 10 años de experiencia en empresas del
                         sector financiero, retail, industriales, comerciales y servicios. La firma posee un equipo de
                         profesionales jóvenes, altamente capacitados. Adicionalmente, dentro de nuestro equipo tenemos
@@ -61,10 +61,10 @@
 
                     <div class="element ion-margin-top">
                         <h4 class="font-bold ion-margin-bottom">Misión</h4>
-                        <p>
-                            Brindar a nuestros clientes mejoras confiables e importantes con el fin de fortalecer sus
-                            compañías y competitividad a través de nuestros servicios de auditoría, consultorías y
-                            servicios financieros.
+                        <p class="text">
+                            Brindar a nuestros clientes mejoras en su control interno, información financiera así como
+                            cumplimientos legales con el fin de fortalecer sus compañías y competitividad a través de
+                            nuestros servicios de auditoría y consultorías.
                         </p>
                     </div>
 
@@ -72,9 +72,9 @@
 
                     <div class="element ion-margin-bottom">
                         <h4 class="font-bold ion-margin-bottom">Visión</h4>
-                        <p>
-                            Ser una firma de auditores referente en fortalecimiento en mejora a los procesos, controles
-                            internos y áreas financieras reales de las compañías locales e internacionales.
+                        <p class="text">
+                            Ser una firma de auditores y consultores referente en fortalecimiento en mejora a los
+                            procesos, controles internos y áreas financieras en El Salvador e internacionalmente.
                         </p>
                     </div>
                 </ion-col>
