--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,13 +9,14 @@
                     <ion-grid fixed>
                         <ion-row>
                             <ion-col sizeMd="6">
-                                <h1>Awesome Slide Content</h1>
+                                <h1>Serpas Consulting El Salvador</h1>
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam vero illum
-                                    repellendus, quidem alias harum numquam consequuntur in saepe.
+                                    Tenemos la mejor combinación entre EXPERIENCIA, COMPROMISO, CONOCIMIENTO Y
+                                    PROFESIONALISMO.
                                 </p>
-                                <ion-button color="light">
+                                <ion-button color="light" routerLink="/contact">
                                     Conotactanos
+                                    <ion-icon name="arrow-forward-outline" class="ion-margin-start"></ion-icon>
                                 </ion-button>
                             </ion-col>
                         </ion-row>
@@ -32,17 +33,16 @@
                         <p class="header__section">Quienes Somos</p>
                         <h1 class="header__title">Bienvenidos a Serpas Consulting El Salvador</h1>
                         <h5 class="header__subtitle">
-                            Serpas Consulting El Salvador, fue creada en mayo del 2016 PARA ofrecer servicios de
+                            Serpas Consulting El Salvador, fue creada en mayo del 2016 para ofrecer servicios de
                             Contabilidad y Auditoría en El Salvador
                         </h5>
                     </div>
                     <p class="text">
-                        Serpas Consulting El Salvador, fue creada en mayo del 2016 para ofrecer servicios de
-                        Contabilidad y Auditoría en El Salvador. La firma ha tenido evolución y actualmente ha añadido a
-                        su portafolio de servicios, consultorías locales e internacionales, estudios de precios de
-                        transferencias y auditorías internas por servicios de co-sourcing. Asimismo, realizamos
-                        evaluaciones en temas de prevención de lavado de dinero y asesoramos en temas de impuestos en El
-                        Salvador.
+                        Serpas Consulting El Salvador, fue creada en mayo del 2016 para ofrecer servicios de Auditoría,
+                        Consultoría y Contabilidad en El Salvador. La firma, además posee servicios de asesoría en
+                        impuestos, elaboración de estudio de precios de transferencias, auditoría interna por servicios
+                        de co-sourcing y evaluación y asesoría sobre temas de prevención de lavado de dinero en el
+                        sector privado y entidades del sector financiero.
                     </p>
                     <br>
                     <ion-button class="ion-margin-top" routerLink="/about">
