--- a/src/app/pages/services/services.page.html
+++ b/src/app/pages/services/services.page.html
@@ -42,6 +42,9 @@
                                     <li>
                                         <ion-text color="secondary">□</ion-text> Auditoría Interna Co-sourcing
                                     </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Auditorías Especiales
+                                    </li>
                                 </ul>
                             </div>
                         </ion-col>
@@ -65,11 +68,13 @@
                         <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
                             <div class="service">
                                 <ion-icon name="share-social-outline" class="service__icon"></ion-icon>
-                                <h4 class="service__title">OUTSOURCING</h4>
+                                <h4 class="service__title">Outsourcing</h4>
                                 <ul class="service__list">
                                     <li>
-                                        <ion-text color="secondary">□</ion-text> Contabilidad Financiera e industrial –
-                                        Servicios contables en la Nube.
+                                        <ion-text color="secondary">□</ion-text> Contabilidad Financiera y Costos
+                                    </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Servicios contables en la Nube.
                                     </li>
                                 </ul>
                             </div>
@@ -81,13 +86,11 @@
                                 <ul class="service__list">
                                     <li>
                                         <ion-text color="secondary">□</ion-text> Conversión de Estados Financieros a
-                                        Normas Internacionales de Información
-                                        Financiera.
+                                        Normas Internacionales de Información Financiera.
                                     </li>
                                     <li>
-                                        <ion-text color="secondary">□</ion-text> Revisión y evaluación del control
-                                        interno
-                                        y Gobierno Corporativo.
+                                        <ion-text color="secondary">□</ion-text> Revisión y evaluación de políticas y
+                                        procedimientos, control interno y gobierno corporativo
                                     </li>
                                     <li>
                                         <ion-text color="secondary">□</ion-text> Libros legales.
@@ -96,6 +99,10 @@
                                         <ion-text color="secondary">□</ion-text> Elaboración de Manuales de Políticas y
                                         Procedimientos Contables y
                                         Administrativos
+                                    </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Evaluación de la seguridad de la
+                                        información de las compañías
                                     </li>
                                 </ul>
                             </div>
@@ -121,6 +128,36 @@
                                     </li>
                                     <li>
                                         <ion-text color="secondary">□</ion-text> Estudios de precios de transferencia
+                                    </li>
+                                </ul>
+                            </div>
+                        </ion-col>
+                        <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
+                            <div class="service">
+                                <ion-icon name="settings-outline" class="service__icon"></ion-icon>
+                                <h4 class="service__title">
+                                    Servicios legales
+                                </h4>
+                                <ul class="service__list">
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Litigios y Arbitrajes
+                                    </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Licitaciones y contrataciones públicas
+                                    </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Asesoría y contratación en El Salvador
+                                    </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Asesoría en desarrollo urbanístico,
+                                        proyectos de construcción, auditoría legal
+                                        inmobiliaria
+                                    </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Derecho Regulatorio
+                                    </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Derecho de familia y laborales
                                     </li>
                                 </ul>
                             </div>
