se agregaron bullets y fix tex

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -79,10 +79,22 @@
                                     <ion-icon name="document-outline" class="service__icon"></ion-icon>
                                     <h4 class="service__title">Auditoria</h4>
                                     <ul class="service__list">
-                                        <li>- Auditoría de Estados Financieros</li>
-                                        <li>- Auditoría de Sistemas</li>
-                                        <li>- Auditoría de Áreas Especificas</li>
-                                        <li>- Auditoría Interna Co-sourcing</li>
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Auditoría de Estados Financieros
+                                        </li>
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Auditoría de Sistemas
+                                        </li>
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Auditoría de Áreas Especificas
+                                        </li>
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Auditoría Interna Co-sourcing
+                                        </li>
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Auditorías Especiales
+                                        </li>
+
                                     </ul>
                                 </div>
                             </ion-col>
@@ -91,10 +103,16 @@
                                     <ion-icon name="man-outline" class="service__icon"></ion-icon>
                                     <h4 class="service__title">Gestión humana</h4>
                                     <ul class="service__list">
-                                        <li>- Búsqueda, selección y reclutamiento de personal contable de cualquier
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Búsqueda, selección y reclutamiento
+                                            de personal contable de cualquier
                                             nivel
-                                            jerárquico.</li>
-                                        <li>- Análisis y creación de los descriptores de puestos.</li>
+                                            jerárquico.
+                                        </li>
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Análisis y creación de los
+                                            descriptores de puestos.
+                                        </li>
                                     </ul>
                                 </div>
                             </ion-col>
@@ -103,9 +121,28 @@
                                     <ion-icon name="chatbubbles-outline" class="service__icon"></ion-icon>
                                     <h4 class="service__title">Consultoria</h4>
                                     <ul class="service__list">
-                                        <li>- Conversión de Estados Financieros a Normas Internacionales de Información
-                                            Financiera.</li>
-                                        <li>- Revisión y evaluación del control interno y Gobierno Corporativo.</li>
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Conversión de Estados Financieros a
+                                            Normas Internacionales de Información Financiera.
+                                        </li>
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Revisión y evaluación de políticas
+                                            y
+                                            procedimientos, control interno y gobierno corporativo
+                                        </li>
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Libros legales.
+                                        </li>
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Elaboración de Manuales de
+                                            Políticas y
+                                            Procedimientos Contables y
+                                            Administrativos
+                                        </li>
+                                        <li>
+                                            <ion-text color="secondary">□</ion-text> Evaluación de la seguridad de la
+                                            información de las compañías
+                                        </li>
                                     </ul>
                                 </div>
                             </ion-col>
