se agregaron animacione

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -14,7 +14,7 @@
     <section class="info">
         <ion-grid fixed>
             <ion-row>
-                <ion-col sizeMd="6" sizeSm="12">
+                <ion-col sizeMd="6" sizeSm="12" class="about-text animate__animated">
                     <div class="header">
                         <p class="header__section">Quienes Somos</p>
                         <h1 class="header__title">Serpas Consulting El Salvador</h1>
@@ -37,7 +37,7 @@
                         <ion-icon name="arrow-forward-outline" class="ion-margin-start"></ion-icon>
                     </ion-button>
                 </ion-col>
-                <ion-col size="5" offset="1" class="hide-app">
+                <ion-col size="5" offset="1" class="hide-app about-image animate__animated">
                     <img src="http://portal.ucm.cl//content/uploads/2020/10/contador-p%C3%BAblico-y-auditor-4.jpg"
                         alt="">
                 </ion-col>
@@ -47,10 +47,10 @@
     <section class="info info--light">
         <ion-grid fixed>
             <ion-row>
-                <ion-col size="5" class="hide-app">
+                <ion-col size="5" class="hide-app mision-image animate__animated">
                     <img src="https://admision.udp.cl/cms/wp-content/uploads/2018/08/Contador-Auditor.jpg" alt="">
                 </ion-col>
-                <ion-col sizeMd="6" offsetMd="1" sizeSm="12">
+                <ion-col sizeMd="6" offsetMd="1" sizeSm="12" class="mision-text animate__animated">
                     <div class="header">
                         <p class="header__section header__section--dark">Misió y visión</p>
                         <h1 class="header__title">
