--- a/src/app/pages/contact/contact.page.html
+++ b/src/app/pages/contact/contact.page.html
@@ -68,7 +68,7 @@
                         </div>
                         <ion-input type="text" placeholder="Asunto*"></ion-input>
                         <ion-textarea type="text" placeholder="Mensaje*" rows="4"></ion-textarea>
-                        <ion-button class="ion-margin-top">
+                        <ion-button class="ion-margin-top" (click)="sendMail()">
                             Enviar mensaje
                         </ion-button>
                     </form>
