--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -15,7 +15,7 @@
                                     PROFESIONALISMO.
                                 </p>
                                 <ion-button color="light" routerLink="/contact">
-                                    Conotactanos
+                                    Contáctanos
                                     <ion-icon name="arrow-forward-outline" class="ion-margin-start"></ion-icon>
                                 </ion-button>
                             </ion-col>
@@ -28,8 +28,8 @@
     <section id="about">
         <ion-grid style="position: relative;" fixed>
             <ion-row>
-                <ion-col sizeMd="6" sizeSm="12">
-                    <div class="header">
+                <ion-col sizeMd="6" sizeSm="12" class="about-text animate__animated animate__delay-1s">
+                    <div class="header ">
                         <p class="header__section">Quienes Somos</p>
                         <h1 class="header__title">Bienvenidos a Serpas Consulting El Salvador</h1>
                         <h5 class="header__subtitle">
@@ -51,7 +51,8 @@
                     </ion-button>
                 </ion-col>
                 <ion-col size="5" offset="1" class="hide-app">
-                    <img src="https://www.uade.edu.ar/media/i4sn2cbq/61.jpg?anchor=center&mode=crop&width=1240&height=910&rnd=132350565369900000"
+                    <img class="about-image animate__animated animate__delay-1s"
+                        src="https://www.uade.edu.ar/media/i4sn2cbq/61.jpg?anchor=center&mode=crop&width=1240&height=910&rnd=132350565369900000"
                         alt="">
                 </ion-col>
             </ion-row>
@@ -63,7 +64,7 @@
         <ion-grid class="container" fixed>
             <ion-row>
                 <ion-col size="12">
-                    <div class="header d-flex">
+                    <div class="header d-flex animate__animated">
                         <div class="w-50">
                             <p class="header__section">Nuestro servicios</p>
                             <h1 class="header__title">Lo que ofrecemos</h1>
@@ -75,7 +76,7 @@
                     <ion-grid class="ion-margin-top ion-no-padding" style="margin: 0 -16px;" fixed>
                         <ion-row>
                             <ion-col sizeMd="4">
-                                <div class="service">
+                                <div class="service animate__animated">
                                     <ion-icon name="document-outline" class="service__icon"></ion-icon>
                                     <h4 class="service__title">Auditoria</h4>
                                     <ul class="service__list">
@@ -98,7 +99,7 @@
                                 </div>
                             </ion-col>
                             <ion-col sizeMd="4">
-                                <div class="service">
+                                <div class="service animate__animated animate__delay-1s">
                                     <ion-icon name="man-outline" class="service__icon"></ion-icon>
                                     <h4 class="service__title">Gestión humana</h4>
                                     <ul class="service__list">
@@ -116,7 +117,7 @@
                                 </div>
                             </ion-col>
                             <ion-col sizeMd="4">
-                                <div class="service">
+                                <div class="service animate__animated animate__delay-2s">
                                     <ion-icon name="chatbubbles-outline" class="service__icon"></ion-icon>
                                     <h4 class="service__title">Consultoria</h4>
                                     <ul class="service__list">
@@ -156,7 +157,7 @@
         <div class="contact__layer"></div>
         <ion-grid fixed>
             <ion-row>
-                <ion-col sizeMd="5" class="contact__info">
+                <ion-col sizeMd="5" class="contact__info animate__animated">
                     <div class="header">
                         <p class="header__section">Ven a visitarnos a</p>
                         <h1 class="header__title">Ponte en contacto</h1>
@@ -195,7 +196,7 @@
                         </ion-label>
                     </ion-item>
                 </ion-col>
-                <ion-col sizeMd="7" class="contact__form">
+                <ion-col sizeMd="7" class="contact__form animate__animated">
                     <div class="header">
                         <h1 class="header__title">Envíanos un mensaje</h1>
                         <p class="header__subtitle">
@@ -209,7 +210,7 @@
                         </div>
                         <ion-input type="text" placeholder="Asunto*"></ion-input>
                         <ion-textarea type="text" placeholder="Mensaje*" rows="4"></ion-textarea>
-                        <ion-button class="ion-margin-top">
+                        <ion-button class="ion-margin-top" (click)="sendMail()">
                             Enviar mensaje
                         </ion-button>
                     </form>
