--- a/src/app/pages/services/services.page.html
+++ b/src/app/pages/services/services.page.html
@@ -14,7 +14,7 @@
     <ion-grid class="container" fixed>
         <ion-row>
             <ion-col size="12">
-                <div class="header d-flex">
+                <div class="header d-flex animate__animated">
                     <div class="w-50">
                         <p class="header__section">Nuestro servicios</p>
                         <h1 class="header__title">Lo que ofrecemos</h1>
@@ -26,7 +26,7 @@
                 <ion-grid class="ion-margin-top ion-no-padding" style="margin: 0 -16px;" fixed>
                     <ion-row>
                         <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
-                            <div class="service">
+                            <div class="service animate__animated">
                                 <ion-icon name="document-outline" class="service__icon"></ion-icon>
                                 <h4 class="service__title">Auditoria</h4>
                                 <ul class="service__list">
@@ -49,7 +49,7 @@
                             </div>
                         </ion-col>
                         <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
-                            <div class="service">
+                            <div class="service animate__animated animate__delay-1s">
                                 <ion-icon name="man-outline" class="service__icon"></ion-icon>
                                 <h4 class="service__title">Gestión humana</h4>
                                 <ul class="service__list">
@@ -66,7 +66,7 @@
                             </div>
                         </ion-col>
                         <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
-                            <div class="service">
+                            <div class="service animate__animated animate__delay-2s">
                                 <ion-icon name="share-social-outline" class="service__icon"></ion-icon>
                                 <h4 class="service__title">Outsourcing</h4>
                                 <ul class="service__list">
@@ -80,7 +80,7 @@
                             </div>
                         </ion-col>
                         <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
-                            <div class="service">
+                            <div class="service animate__animated animate__delay-3s">
                                 <ion-icon name="chatbubbles-outline" class="service__icon"></ion-icon>
                                 <h4 class="service__title">Consultoria</h4>
                                 <ul class="service__list">
@@ -108,7 +108,7 @@
                             </div>
                         </ion-col>
                         <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
-                            <div class="service">
+                            <div class="service animate__animated animate__delay-4s">
                                 <ion-icon name="cash-outline" class="service__icon"></ion-icon>
                                 <h4 class="service__title">Impuestos</h4>
                                 <ul class="service__list">
@@ -133,7 +133,7 @@
                             </div>
                         </ion-col>
                         <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
-                            <div class="service">
+                            <div class="service animate__animated animate__delay-5s">
                                 <ion-icon name="settings-outline" class="service__icon"></ion-icon>
                                 <h4 class="service__title">
                                     Servicios legales
@@ -163,7 +163,7 @@
                             </div>
                         </ion-col>
                         <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
-                            <div class="service">
+                            <div class="service animate__animated animate__delay-6s">
                                 <ion-icon name="book-outline" class="service__icon"></ion-icon>
                                 <h4 class="service__title">
                                     Elaboración de manuales de prevención de lavado de dinero y activos
