--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,7 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import "animate.css/animate.css";
 
 * {
   font-family: "Poppins", sans-serif !important;
@@ -207,6 +208,9 @@ p {
     font-size: 50px;
     font-weight: 600;
     color: white;
+    animation-name: fadeInUp;
+    animation-duration: var(--animate-duration);
+    animation-fill-mode: both;
   }
   &__breadcrumbs {
   }
@@ -277,15 +281,16 @@ p {
 
 .service {
   border: 1px solid #e6e6e6;
-  border-radius: 6px;
+  border-radius: 10px;
   padding: 50px 40px 40px;
   margin: 16px;
   height: 92%;
+  box-shadow: 81px 81px 134px -24px rgb(5 64 46 / 3%);
   &__icon {
     font-size: 25px;
     font-size: 50px;
     color: #1128b8;
-    --ionicon-stroke-width: 17px;
+    --ionicon-stroke-width: 25px;
     margin-bottom: 24px;
   }
   &__title {
@@ -338,5 +343,12 @@ p {
     &__form {
       padding: 80px 16px;
     }
+  }
+}
+
+.animate {
+  &__delay-6s {
+    animation-delay: 6s;
+    animation-delay: calc(var(--animate-delay) * 6);
   }
 }
