se arreglaron rutas

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -35,8 +35,7 @@
                     <ion-toolbar>
                         <img src="assets/images/logo.png" alt="" width="130px" routerLink="/">
                         <ion-buttons class="hide-app" slot="end">
-                            <ion-button color="dark" class="menu" [ngClass]="{'active': url === '/home'}"
-                                routerLink="/">
+                            <ion-button color="dark" class="menu" [ngClass]="{'active': url === '/'}" routerLink="/">
                                 Inicio
                             </ion-button>
                             <ion-button color="dark" class="menu" [ngClass]="{'active': url === '/about'}"
