se arreglo texto

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -52,7 +52,7 @@
                 </ion-col>
                 <ion-col sizeMd="6" offsetMd="1" sizeSm="12" class="mision-text animate__animated">
                     <div class="header">
-                        <p class="header__section header__section--dark">Misió y visión</p>
+                        <p class="header__section header__section--dark">Misión y visión</p>
                         <h1 class="header__title">
                             <!-- Better Website Means A BetternUser Experience -->
                             Soluciones a la medida en todas las áreas de servicios que brindamos.
