--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -33,7 +33,7 @@
             <ion-row>
                 <ion-col size="12" class="ion-no-padding">
                     <ion-toolbar>
-                        <img src="assets/images/logo.png" alt="" width="130px" routerLink="/">
+                        <img src="assets/images/logo.png" alt="serpas consulting" width="130px" routerLink="/">
                         <ion-buttons class="hide-app" slot="end">
                             <ion-button color="dark" class="menu" [ngClass]="{'active': url === '/'}" routerLink="/">
                                 Inicio
