--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -39,7 +39,7 @@
                 </ion-col>
                 <ion-col size="5" offset="1" class="hide-app about-image animate__animated">
                     <img src="http://portal.ucm.cl//content/uploads/2020/10/contador-p%C3%BAblico-y-auditor-4.jpg"
-                        alt="">
+                        alt="serpas consulting">
                 </ion-col>
             </ion-row>
         </ion-grid>
@@ -48,7 +48,7 @@
         <ion-grid fixed>
             <ion-row>
                 <ion-col size="5" class="hide-app mision-image animate__animated">
-                    <img src="https://admision.udp.cl/cms/wp-content/uploads/2018/08/Contador-Auditor.jpg" alt="">
+                    <img src="https://admision.udp.cl/cms/wp-content/uploads/2018/08/Contador-Auditor.jpg" alt="serpas consulting">
                 </ion-col>
                 <ion-col sizeMd="6" offsetMd="1" sizeSm="12" class="mision-text animate__animated">
                     <div class="header">
