--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -53,11 +53,11 @@
                 <ion-col size="5" offset="1" class="hide-app">
                     <img class="about-image animate__animated animate__delay-1s"
                         src="https://www.uade.edu.ar/media/i4sn2cbq/61.jpg?anchor=center&mode=crop&width=1240&height=910&rnd=132350565369900000"
-                        alt="">
+                        alt="serpas consulting">
                 </ion-col>
             </ion-row>
             <img class="frame hide-app" src="http://integrio.wgl-demo.net/wp-content/uploads/2019/05/section_bg_01.png"
-                alt="">
+                alt="serpas consulting">
         </ion-grid>
     </section>
     <section class="services">
