--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,16 +4,16 @@
             <ion-grid fixed>
                 <ion-row>
                     <ion-col sizeMd="4">
-                        <img class="footer__logo" src="assets/images/logo.png" alt="">
+                        <img class="footer__logo" src="assets/images/logo.png" alt="serpas consulting">
                         <p class="footer__label">
                             Nuestra firma posee una excelente experiencia en atención personalizada
                             y oportuna con nuestros clientes, contamos con presencia en todo El Salvador.
                         </p>
                         <div class="d-flex footer__socials">
-                            <img src="assets/images/twitter.png" alt="">
-                            <img src="assets/images/whatsapp.png" alt="">
-                            <img src="assets/images/linkedin.png" alt="">
-                            <img src="assets/images/facebook.png" alt="">
+                            <img src="assets/images/twitter.png" alt="serpas consulting">
+                            <img src="assets/images/whatsapp.png" alt="serpas consulting">
+                            <img src="assets/images/linkedin.png" alt="serpas consulting">
+                            <img src="assets/images/facebook.png" alt="serpas consulting">
                         </div>
                     </ion-col>
                     <ion-col sizeMd="3" offsetMd="1">
