se agrego nuevo servicio y fix ortografia

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
                         </li>
                         <li class="info__item ion-padding-start">
                             <a class="info__button" routerLink="/contact">
-                                Contactanos
+                                Contáctanos
                             </a>
                         </li>
                     </ul>
