--- a/src/app/pages/services/services.page.html
+++ b/src/app/pages/services/services.page.html
@@ -103,14 +103,24 @@
                         </ion-col>
                         <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
                             <div class="service animate__animated animate__delay-3s">
-                                <ion-icon name="share-social-outline" class="service__icon"></ion-icon>
-                                <h4 class="service__title">Outsourcing</h4>
+                                <ion-icon name="bulb-outline" class="service__icon"></ion-icon>
+                                <h4 class="service__title">B.I</h4>
                                 <ul class="service__list">
                                     <li>
-                                        <ion-text color="secondary">□</ion-text> Contabilidad Financiera y Costos
+                                        <ion-text color="secondary">□</ion-text> Construcción de base de datos
                                     </li>
                                     <li>
-                                        <ion-text color="secondary">□</ion-text> Servicios contables en la Nube.
+                                        <ion-text color="secondary">□</ion-text> Procesamiento de datos
+                                    </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Análisis de datos
+                                    </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Identificación de oportunidades de
+                                        negocio
+                                    </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Data Dashboard OFF/ON
                                     </li>
                                 </ul>
                             </div>
@@ -147,6 +157,20 @@
                         </ion-col>
                         <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
                             <div class="service animate__animated animate__delay-5s">
+                                <ion-icon name="share-social-outline" class="service__icon"></ion-icon>
+                                <h4 class="service__title">Outsourcing</h4>
+                                <ul class="service__list">
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Contabilidad Financiera y Costos
+                                    </li>
+                                    <li>
+                                        <ion-text color="secondary">□</ion-text> Servicios contables en la Nube.
+                                    </li>
+                                </ul>
+                            </div>
+                        </ion-col>
+                        <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
+                            <div class="service animate__animated animate__delay-6s">
                                 <ion-icon name="book-outline" class="service__icon"></ion-icon>
                                 <h4 class="service__title">
                                     Elaboración de manuales de prevención de lavado de dinero y activos
@@ -165,7 +189,7 @@
                             </div>
                         </ion-col>
                         <ion-col sizeMd="4" sizeSm="12" sizeXs="12">
-                            <div class="service animate__animated animate__delay-6s">
+                            <div class="service animate__animated animate__delay-7s">
                                 <ion-icon name="man-outline" class="service__icon"></ion-icon>
                                 <h4 class="service__title">Gestión humana</h4>
                                 <ul class="service__list">
